@@ -7,7 +7,7 @@ from ... import image as im
 
 topdir = os.path.realpath(os.path.dirname(__file__) + "/../../..")
 sys.path.append(topdir + "/puppies/lib")
-import gauss as g
+import _gauss as g
 
 __all__ = ["gaussian", "guess", "fit"]
 
